<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>core</name>
  <version>1.0.0</version>
  <description>Eclipse Muto Core Package</description>
  <maintainer email="alp.sarica@eteration.com">Alp SARICA</maintainer>
  <license>Eclipse Public License v2.0</license>

  <test_depend>python3-pytest</test_depend>
  
  <depend>python3-requests</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
